--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --color-highlight: #CCCCCC; /* Abu-abu muda untuk hover */
     --color-border: #333333;
 
-    --font-heading: 'UnifrakturMaguntia', cursive;
+    --font-heading: 'Metal Mania', cursive;
     --font-body: 'Oswald', sans-serif;
 }
 
